--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -89,6 +89,7 @@ html body:not(.dark) {
 body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, segoe ui, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
   font-weight: 300;
+  text-rendering: optimizeLegibility;
 }
 
 strong,
