--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1462,10 +1462,11 @@ a.btn {
 }
 
 #menu .hmenu-panel hr {
-  margin: 0.466em 0;
+  background-color: transparent;
   display: block;
   height: 1px;
   border: 0;
+  margin: 0.466em 0;
   border-top: 1px solid var(--border);
   padding: 0;
 }
