--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1620,6 +1620,7 @@ a.btn {
  */
 body > .main {
   z-index: 1;
+  min-height: calc(100vh - var(--header-height) - var(--footer-height) - 2px);
 }
 
 @media screen and (min-width: 768px) {
