--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -59,3 +59,21 @@
 {{- $chocolatloaderindex := resources.Get "js/extended/header-chocolat-index.js" | resources.ExecuteAsTemplate "js/extended/header-chocolat-index.js" . | resources.Minify }}
 <script defer crossorigin="anonymous" src="{{ $chocolatloaderindex.RelPermalink }}?{{ now.Unix }}"></script>
 {{ end }}
+
+<!-- Load Matomo stats tracker -->
+{{ if in .Site.BaseURL "www.virtualmin.com" }}
+<!-- Matomo -->
+<script>
+  const _paq = window._paq = window._paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    const u="https://stats.virtualmin.com/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    const d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
+{{ end }}
