--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -64,7 +64,7 @@
 {{ if in .Site.BaseURL "www.virtualmin.com" }}
 <!-- Matomo -->
 <script>
-  const _paq = window._paq = window._paq || [];
+  let _paq = window._paq = window._paq || [];
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
