Fix to used JavaScript scoping

--- a/layouts/partials/nav_menu.html
+++ b/layouts/partials/nav_menu.html
@@ -8,7 +8,7 @@
             <li><a href="/archives/"><span>Changelog</span></a></li>
             <li><a href="/faq/"><span>FAQ</span></a></li>
             <li><a href="/docs/"><span>Documentation</span></a></li>
-            <li><a target='_blank' onclick='themeLink(event, this)' href="https://forum.virtualmin.com/c/webmin/12"><span>Forum</span>&nbsp;<svg
+            <li><a target='_blank' onclick='__.themeLink(event, this)' href="https://forum.virtualmin.com/c/webmin/12"><span>Forum</span>&nbsp;<svg
                   fill="none" shape-rendering="geometricPrecision" stroke="currentcolor" stroke-linecap="round"
                   stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
                   <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
