--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -324,6 +324,11 @@ body .logo .logo-switches {
   border-radius: var(--radius);
 }
 
+ul>li>.alert {
+  margin-top: 0.5em;
+  margin-bottom: 0.75em;
+}
+
 .alert-primary {
   color: #004085;
   background-color: #cce5ff;
