Fix GitHub stats badges positioning on the main page

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1972,6 +1972,11 @@ a.screenshot-entry {
   }
 } */
 
+/* GitHub stats badges */
+.social-icons {
+  margin: 10px auto 20px auto;
+}
+
 .social-icons>a[target="_blank"] {
   display: none;
 }
