Fix alerts positioning inside `ol`

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -337,6 +337,7 @@ body .logo .logo-switches {
   border-radius: var(--radius);
 }
 
+ol>li>.alert,
 ul>li>.alert {
   margin-top: 0.5em;
   margin-bottom: 0.75em;
